resolve alignment issue

--- a/src/components/FeaturedProjects/FeaturedProjects.css
+++ b/src/components/FeaturedProjects/FeaturedProjects.css
@@ -10,11 +10,17 @@
 }
 
 .featured-project__content {
+  flex-direction: column;
+  align-items: flex-start;
   text-align: right;
 }
 
+.featured-project__details {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
 .featured-project__header {
-  margin: auto;
   color: rgb(114, 229, 225);
 }
 
@@ -30,6 +36,17 @@
   background-color: rgb(35, 29, 55);
   padding: 20px;
   border-radius: 20px;
+}
+
+.featured-project__technologies {
+  display: inline-flex;
+  position: relative;
+  color: grey;
+  max-width: 30%;
+  word-wrap: break-word;
+  word-break: break-word;
+  white-space: normal;
+  text-align: right;
 }
 
 .featured-project__image {
@@ -54,5 +71,5 @@
 
 .featured-project__icon:hover {
   fill: rgb(114, 229, 225);
-  transform: scale(1.2);
+  transform: scale(1.5);
 }
